# melange-decco

./: .gitignore  Makefile  README.md  decco.opam  dune-project  jest.config.js  melange-decco.opam  package.json  pnpm-lock.yaml
lib/: Decco.re  Decco_Codecs.re  dune
ppx/: BatOption.re  Codecs.re  DecodeCases.re  Polyvariants.re  Ppx_decco.re  Records.re  Signature.re  Structure.re  Tuple.re  Utils.re  Variants.re  dune
test/: OpenBelt.re  Recursion.re  TestUtils.re  Unboxed.re  dune  test.re
