opam-version: "2.0"
version: "1.0"
synopsis: "decco"
description: "Bucklescript PPX which generates JSON (de)serializers for user-defined types"
dev-repo: "git+https://github.com/rolandpeelen/decco"
license: "MIT"
homepage: "https://github.com/rolandpeelen/decco"
bug-reports: "https://github.com/rolandpeelen/decco"
depends: [
  "ocaml"
  "dune"
  "melange" {>= "2.0.0"}
  "reason" {>= "3.10.0"}
  "ppxlib" {>= "0.31.0"}
  "melange-jest" {with-test}
  "ocaml-lsp-server" {with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
